add search without hotel name