@@ -37,12 +37,35 @@ public class HotelSearch {
         List<String> hotelNames = driver.findElements(By.xpath("//h4[contains(@class,'list_title')]//b"))
                 .stream()
                 .map(el -> el.getAttribute("textContent"))
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println(hotelNames.size());
         hotelNames.forEach(System.out::println);
 
         Assert.assertEquals("Jumeirah Beach Hotel", hotelNames.get(0));
+
+        driver.quit();
+    }
+
+    @Test
+    public void searchHotelWithoutNameHotel() {
+        driver = ReUsable.getDriver("chrome");
+        driver.manage().window().maximize();
+        driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(5));
+        driver.get("http://www.kurs-selenium.pl/demo/");
+        driver.findElement(By.xpath("//input[@name='checkin']")).sendKeys("17/04/2021");
+        driver.findElement(By.xpath("//input[@name='checkout']")).click();
+        driver.findElements(By.xpath("//td[@class='day ' and text()='23']"))
+                .stream()
+                .filter(WebElement::isDisplayed)
+                .findFirst()
+                .ifPresent(WebElement::click);
+
+        driver.findElement(By.xpath("//button[text()=' Search']")).click();
+        WebElement headingNoResults = driver.findElement(By.xpath("//h2[text()='No Results Found']"));
+
+        Assert.assertTrue(headingNoResults.getText().contains("No Results Found"));
+        Assert.assertEquals(headingNoResults.getAttribute("textContent"), "No Results Found");
 
         driver.quit();
     }
